--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               type="email"
               name="email"
               id=""
-              placeholder="example@gmail.com"
+              placeholder="tanjila@gmail.com"
             />
             <input type="submit" name="Submit" id="ssubmit" />
           </div>
@@ -391,9 +391,9 @@
             BEAUTY
             <span>COSMATIC</span>
           </h3>
-          <p>&copy;2022 Beauty Cosmatic | Developed by Sumi.</p>
+          <p>&copy;2022 Beauty Cosmatic | Developed by Tanjila Rahman Ohe.</p>
           <div class="icon-div">
-            <a href="" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com/tanjilarahman.ohe.5" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
             <a href="" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
           </div>
         </div>
