--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <!-- fav icon -->
   <link rel="shortcut icon" href="assets/world-cup.png" type="image/x-icon">
 </head>
-<body>
-  
+<body> 
 </body>
 </html>
 
@@ -66,7 +65,7 @@
         </div>
         <!-- #############NAV MENU START################# -->
         <div class="menu-wrapper">
-          <p>SUMMER 2022</p>
+          <p>SUMMER 2023</p>
           <ul>
             <li><a href="#">FEATURED</a></li>
             <li><a href="#">EYES</a></li>
@@ -82,7 +81,7 @@
       <section class="sales-ribbon">
         <p>
           <span>100% FREE SHIPPING</span>
-          <code>over $100 purcheses</code>
+          <code>over 1000 TAKA purcheses</code>
           <span>PLATINUM</span>
           <code>membership!</code>
         </p>
@@ -98,7 +97,8 @@
             <h1>COMPLEXION</h1>
             <h3>RESCUE - CRIMSION LOVE AND HATE</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, sequi! Omnis id minus, adipisci quis assumenda ex asperiores ducimus voluptatem accusamus mollitia maxime consectetur sequi dolor vitae iure debitis repellat saepe dolorum officiis obcaecati culpa?
+              There are certain shades of limelight that can wreck a girl's complexion .
+              Audrey Hepburn 
             </p>
           </div>
           <div class="button-div">
@@ -200,13 +200,14 @@
           </div>
 
           <div class="fashion-pic02">
-            <img src="/image/image-2.jpg" alt="" />
+            <img src="./image/image-2.jpg" alt="" />
           </div>
 
           <div class="fashion-pic-about">
             <h2>About</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat nam iusto cupiditate non dolor? Temporibus nemo in quidem illum non.
+              we know how beneficial it is to use the right beauty products in modern times, you might be feeling stressed about all the fuss that comes with working on your looks. 
+              Worry not, because Yes Madam comes to aid you with a range of beauty and salon services that you can enjoy from the comfort of your home.
             </p>
             <div class="pic-button">
               <button>LEARN MORE</button>
@@ -227,10 +228,9 @@
               />
             </div>
             <div class="item-text-dtls">
-              <h3>FACE MACKUP</h3>
+              <h3>FACE MAKEUP</h3>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt est quaerat natus in dolores nihil!
-              </p>
+                Facial Makeup Products are products that are used to color and highlight facial features.   
             </div>
             <div class="item-btn">
               <button>SHOP NOW</button>
@@ -242,9 +242,9 @@
               <img src="./image/image-5.jpg" alt="" />
             </div>
             <div class="item-text-dtls">
-              <h3>EYES MACKUP</h3>
+              <h3>EYES MAKEUP</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eaque perspiciatis vel nostrum, iste voluptate.
+                Eye shadow is a cosmetic applied primarily to the eyelids to attract attention to the wearer's eyes, making them stand out or look more attractive.
               </p>
             </div>
             <div class="item-btn">
@@ -257,9 +257,9 @@
               <img src="./image/image-6.jpg" alt="" />
             </div>
             <div class="item-text-dtls">
-              <h3>NAILS MACKUP</h3>
+              <h3>NAILS Polishes</h3>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae modi minima vitae autem nostrum esse.
+                Nail cosmetics include a broad range of beauty products that promote the appearance and durability of fingernails and toenails.
               </p>
             </div>
             <div class="item-btn">
@@ -272,9 +272,9 @@
               <img src="./image/image-7.jpg" alt="" />
             </div>
             <div class="item-text-dtls">
-              <h3>BODY MACKUP</h3>
+              <h3>BODY MAKEUP</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores possimus eos, pariatur totam molestiae soluta.
+                A foundation-like product developed for your chest, legs, arms, hands, and feet .
               </p>
             </div>
             <div class="item-btn">
@@ -289,7 +289,7 @@
             <div class="item-text-dtls">
               <h3>HAIR CARE</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic perferendis minus quia est vel fuga?
+                Finding the right hair care routine for you can be a little daunting, especially with so much information online, an overflow .
               </p>
             </div>
             <div class="item-btn">
@@ -302,9 +302,9 @@
               <img src="./image/image-9.webp" alt="" />
             </div>
             <div class="item-text-dtls">
-              <h3>LEG CARE</h3>
+              <h3>LEG CARE Products</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore accusamus commodi eos veniam obcaecati fugiat.
+                Moisturize twice a day. Having the skin dry for a prolonged period can cause irritation and blemishes.
               </p>
             </div>
             <div class="item-btn">
@@ -319,7 +319,7 @@
             <div class="item-text-dtls">
               <h3>BREAST CARE</h3>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim dicta autem eos quasi adipisci sit?
+                Breast Care is a scientific journal that encompasses all aspects of breast biology. As an interdisciplinary journal
               </p>
             </div>
             <div class="item-btn">
@@ -332,9 +332,9 @@
               <img src="./image/image-11.jpg" alt="" />
             </div>
             <div class="item-text-dtls">
-              <h3>LIPS MACKUP</h3>
+              <h3>LIPSTICK</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum labore iure repudiandae suscipit iste. Harum.
+                Lipstick is your day to day necessary lifestyle item. You will get 100% authentic product imported from UK & USA of this category from the MallBd
               </p>
             </div>
             <div class="item-btn">
@@ -357,7 +357,8 @@
           <div class="fashion-pic-about">
             <h2>About</h2>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur explicabo sit, dolore et quisquam eaque, laboriosam, porro quos ea neque quas sint. Officiis cum fuga corrupti dolore fugiat dolorum!
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur explicabo sit, dolore et quisquam eaque,
+               laboriosam, porro quos ea neque quas sint. Officiis cum fuga corrupti dolore fugiat dolorum!
             </p>
             <div class="pic-button">
               <button>CONTACT US</button>
